--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,8 +11,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="org.secuso.privacyfriendlyexample.activities.MainActivity"
-    tools:showIn="@layout/activity_main"
+    tools:context="org.secuso.privacyfriendlyexample.ui.MainActivity"
+    tools:showIn="@layout/app_bar_main"
     android:orientation="vertical"
     style="@style/AlertDialog.AppCompat">
 
@@ -31,6 +31,7 @@
         android:text="@string/main_text_normalbutton_desc"/>
 
     <LinearLayout
+        android:id="@+id/button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -108,5 +109,10 @@
         android:text="@string/main_button_disabled_text"
         android:id="@+id/main_button_disabled"
         android:onClick="onClick"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_button_welcomedialog_text"/>
 
 </LinearLayout>
