--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -8,29 +8,30 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         tools:context="org.secuso.privacyfriendlyexample.ui.MainActivity">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+        <include layout="@layout/toolbar"/>
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/main_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:context=".activities.HelpActivity">
 
-        </com.google.android.material.appbar.AppBarLayout>
+            <ExpandableListView
+                android:divider="@android:color/darker_gray"
+                android:dividerHeight="0.5dp"
+                android:id="@+id/generalExpandableListView"
+                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content" />
 
-        <include layout="@layout/activity_help_content" />
+        </RelativeLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
