--- a/app/src/main/res/menu/main_drawer.xml
+++ b/app/src/main/res/menu/main_drawer.xml
@@ -9,16 +9,16 @@
             android:title="@string/action_main" />
         <item
             android:id="@+id/nav_game"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_game"
             android:title="@string/action_game" />
-        <item
-            android:id="@+id/nav_tutorial"
-            android:icon="@drawable/ic_menu_tutorial"
-            android:title="@string/action_tutorial" />
     </group>
 
     <group android:id="@+id/nav_group_add"
         android:checkableBehavior="all">
+        <item
+            android:id="@+id/nav_tutorial"
+            android:icon="@drawable/ic_menu_tutorial"
+            android:title="@string/action_tutorial" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_settings"
