--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -4,7 +4,7 @@
 
     <header
         android:fragment="org.secuso.privacyfriendlyexample.ui.SettingsActivity$GeneralPreferenceFragment"
-        android:icon="@drawable/ic_info_black_24dp"
+        android:icon="@drawable/ic_menu_info"
         android:title="@string/pref_header_general" />
 
 </preference-headers>
