[refactor] introduces pfa-core library. splits example app into two modules, one using jetpack-compose, the other the common view approach. Introduces somewhat usage of the correct PFATheme.

--- a/compose/src/main/res/menu/main_drawer.xml
+++ b/compose/src/main/res/menu/main_drawer.xml
@@ -17,7 +17,7 @@
         android:checkableBehavior="all">
         <item
             android:id="@+id/nav_tutorial"
-            android:icon="@drawable/ic_menu_tutorial"
+            android:icon="@drawable/ic_tutorial"
             android:title="@string/action_tutorial" />
         <item
             android:id="@+id/nav_settings"
